--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongo": "^0.1.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.3"
+  }
 }
