--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dom": "^0.0.3",
     "i": "^0.3.7",
     "navigate": "^0.3.6",
